namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imunoz
  labels:
     type: deployment_api_rest
