app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  labels:
    app: deployment_api
    tier: frontend
spec:  
  ports:
  - port: 80
  type: NodePort 
  selector:
    app: deployment_api
    tier: frontend
