db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-db
  labels:
    db: database
    tier: data
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    db: database
    tier: data
